tests/baselines/reference/derivedTypeCallingBaseImplWithOptionalParams(strict=true).errors.txt
derivedTypeCallingBaseImplWithOptionalParams.ts(2,5): error TS7010: 'myMethod', which lacks return-type annotation, implicitly has an 'any' return type.
derivedTypeCallingBaseImplWithOptionalParams.ts(13,3): error TS2554: Expected 1 arguments, but got 0.


==== derivedTypeCallingBaseImplWithOptionalParams.ts (2 errors) ====
    interface MyInterface {
        myMethod(...myList: any[]);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'myMethod', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    class MyClass implements MyInterface {
        myMethod(myList: any[]) { // valid
        }
    }
    
    var x: MyInterface = new MyClass();
    x.myMethod(); // should be valid, but MyClass has no implementation to handle it.
    
    var y: MyClass = new MyClass();
    y.myMethod(); // error
      ~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 derivedTypeCallingBaseImplWithOptionalParams.ts:5:14: An argument for 'myList' was not provided.